    - added undefer_group() MapperOption, sets a set of "deferred"
      columns joined by a "group" to load as "undeferred".
- sql
  - result.last_inserted_ids() should return a list that is identically
    sized to the primary key constraint of the table.  values that were 
    "passively" created and not available via cursor.lastrowid will be None.
  - long-identifier detection fixed to use > rather than >= for 
    max ident length [ticket:589]
  - fixed bug where selectable.corresponding_column(selectable.c.col)
     would not return selectable.c.col, if the selectable is a join
     of a table and another join involving the same table.  messed
     up ORM decision making [ticket:593]


- mysql
  - added 'fields' to reserved words [ticket:590]
- extensions
  - proxyengine is temporarily removed, pending an actually working
    replacement.
  - SelectResults has been replaced by Query.  SelectResults / 
    SelectResultsExt still exist but just return a slightly modified
    Query object for backwards-compatibility.  join_to() method 
    from SelectResults isn't present anymore, need to use join(). 
      
0.3.8
- engines
  - added detach() to Connection, allows underlying DBAPI connection
    to be detached from its pool, closing on dereference/close()
    instead of being reused by the pool.
  - added invalidate() to Connection, immediately invalidates the
    Connection and its underlying DBAPI connection.
- sql
  - _Label class overrides compare_self to return its ultimate
    object. meaning, if you say someexpr.label('foo') == 5, it
    produces the correct "someexpr == 5".
  - _Label propigates "_hide_froms()" so that scalar selects
    behave more properly with regards to FROM clause #574 
  - fix to long name generation when using oid_column as an order by
    (oids used heavily in mapper queries)
  - significant speed improvement to ResultProxy, pre-caches
    TypeEngine dialect implementations and saves on function calls
    per column